# MergePdf

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.test  LICENSE  README.md  requirements.txt  run.bat  run.sh
src/: error.rs  lib.rs  main.rs  ui.py
src/pdf/: merge.rs
tests/: merge_functional.rs
